--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -6,8 +6,18 @@
   color: $color-white;
 
   cursor: pointer;
+  transition: background-color 0.5s;
+
+  &:hover {
+    background-color: $color-orange;
+  }
 
   &--orange {
     background-color: $color-orange;
+    transition: background-color 0.5s;
+
+    &:hover {
+      background-color: $color-green;
+    }
   }
 }
