--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -25,7 +25,7 @@
 
     font-family: $IBM;
     font-weight: 400;
-    font-size: 14px;
+    font-size: $item-size;
   }
 
   &__heading {
@@ -45,7 +45,7 @@
     width: 177px;
 
     font-family: $IBM;
-    font-size: 14px;
+    font-size: $item-size;
     line-height: 150%;
    
     &::after {
@@ -66,7 +66,7 @@
     margin-left: 10%;
 
     font-family: $IBM;
-    font-size: 14px;
+    font-size: $item-size;
     font-weight: 500;
     line-height: 100%;
 
@@ -104,6 +104,14 @@
 
   @media (max-width: 600px) {
     padding: 50px 5%;
+
+    &__schedule {
+      margin: 0;
+    }
+
+    &__contacts {
+      margin-left: 10px;
+    }
 
     &__logo {
       display: none;
