--- a/src/styles/_lecture.scss
+++ b/src/styles/_lecture.scss
@@ -16,7 +16,7 @@
     width: 570px;
     padding: 45px 100px 50px;
 
-    background: #fff;
+    background: $color-white;
     box-shadow: 0 2px 0 $color-green;
   }
 
@@ -30,7 +30,7 @@
   }
 
   &__heading {
-    font-size: 36px;
+    font-size: $heading-size;
     margin-top: 16px;
   }
 
