--- a/src/styles/_title.scss
+++ b/src/styles/_title.scss
@@ -3,6 +3,14 @@
   height: 655px;
   margin-bottom: 100px;
 
+  &__logo {
+    position: absolute;
+    top: 15px;
+    right: calc(50% - 34px);
+
+    background: center / cover no-repeat url(../images/NA_MU.png);
+  }
+
   &__img {
     height: 655px;
     float: right;
@@ -40,14 +48,6 @@
       text-align: center;
       margin: 10px 0 30px;
     }
-  }
-
-  &__logo {
-    position: absolute;
-    top: 15px;
-    right: 50%;
-
-    background: center / cover no-repeat url(../images/NA_MU.png);
   }
 
   &__ticket {
