--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -2,9 +2,11 @@ $IBM: "IBM Plex Sans", sans-serif;
 $Montserrat: "Montserrat", sans-serif;
 
 $color-black: black;
-$color-green: #1a5a4c;
 $color-white: white;
+$color-green: #1a5a4c;
+$color-orange: #f14a27;
 $btn-size: 70px;
 $general-padding: 5%;
-$color-orange: #f14a27;
 $heading-size: 36px;
+$item-size: 14px;
+$title-size: 48px;
