--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -4,7 +4,7 @@
   &__title {
     margin-bottom: 60px;
     font-weight: bold;
-    font-size: 48px;
+    font-size: $title-size;
   }
 
   &__element {
@@ -51,9 +51,9 @@
   }
 
   &__heading {
+    margin: 10px 0;
     white-space: nowrap;
     font-size: 36px;
-    margin: 10px 0;
 
     &::after {
       display: inline-block;
