--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -4,7 +4,7 @@
   &__title {
     margin-bottom: 60px;
     font-weight: bold;
-    font-size: 48px;
+    font-size: $title-size;
   }
 
   &__picture {
@@ -29,7 +29,6 @@
 
     &-bottom {
       display: flex;
-
       margin-bottom: 40px;
 
       & :first-child {
