--- a/src/styles/_mark.scss
+++ b/src/styles/_mark.scss
@@ -1,7 +1,7 @@
 .mark {
   font-family: $IBM;
   font-weight: 500;
-  font-size: 14px;
+  font-size: $item-size;
   text-transform: uppercase;
   opacity: 0.8;
 }
