--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,5 +1,15 @@
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
+}
+
+p,
+h1,
+h2,
+h3,
+body {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
