--- a/src/styles/visit_us.scss
+++ b/src/styles/visit_us.scss
@@ -11,6 +11,10 @@
 
   background-color: #3f5252;
 
+  background-image: url("../images/к.png");
+  background-position: bottom 0 left 0;
+  background-repeat: no-repeat;
+
   &__img {
     position: absolute;
     height: 800px;
