--- a/src/styles/exhibitions.scss
+++ b/src/styles/exhibitions.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
 
+  padding-top: 170px;
   padding-bottom: 260px;
   padding-left: calc(50% - 640px);
   padding-right: calc(50% - 640px);
