--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,8 @@
 @import "fonts";
 @import "typography";
 @import "reset.scss";
+@import "header.scss";
+@import "nav.scss";
 @import "ex-card.scss";
 @import "exhibitions.scss";
 @import "visit_us.scss";
