--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,12 +1,10 @@
 .header {
-
   box-sizing: border-box;
   position: relative;
   width: 100%;
   min-height: 800px;
   padding-top: 20px;
   padding-bottom: 52px;
-
 
   padding-left: calc(50% - 640px);
   padding-right: calc(50% - 640px);
@@ -44,7 +42,7 @@
     font-weight: 100;
     font-size: 16px;
     line-height: 150%;
-    color: #F1F5F4;
+    color: #f1f5f4;
 
     z-index: -1;
   }
@@ -94,11 +92,13 @@
     color: #f1f5f4;
   }
 
-
   &__ticket {
+    height: 60px;
+    width: 270px;
+
     margin-left: 90px;
     margin-bottom: 132px;
-    padding: 17.5px 81.5px;
+    padding: 17px 80px;
 
     font-family: "Raleway", sans-serif;
     font-size: 16px;
@@ -130,7 +130,7 @@
 
       width: 468px;
       height: 1px;
-      background-color:  #f1f5f4;
+      background-color: #f1f5f4;
       opacity: 0.3;
     }
   }
