socials block is active

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -15,6 +15,10 @@
     margin-top: 60px;
     display: flex;
     justify-content: space-between;
+
+    & :first-child {
+      margin-right: 5px;
+    }
   }
 
   &__schedule {
