--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -165,4 +165,14 @@
       width: 320px;
     }
   }
+
+  @media (max-width: 480px) {
+    &__img {
+      height: 180px;
+    }
+
+    &__info {
+      text-align: center;
+    }
+  }
 }
