--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -96,11 +96,13 @@
 
   @media (max-width: 900px) {
     justify-content: center;
+
     &__contacts {
       &::after {
         display: none;
       }
     }
+
     &__nav {
       display: none;
     }
@@ -119,6 +121,24 @@
 
     &__logo {
       display: none;
+    }
+  }
+
+  @media (max-width: 380px) {
+    flex-direction: column;
+    align-items: center;
+
+    &__contacts,
+    &__schedule {
+      width: 190px;
+    }
+
+    &__schedule {
+      margin-bottom: 20px;
+    }
+
+    &__heading {
+      margin-bottom: 5px;
     }
   }
 }
