--- a/src/styles/_title.scss
+++ b/src/styles/_title.scss
@@ -159,7 +159,23 @@
     }
   }
 
+  @media (max-width: 900px) {
+    height: 655px;
+  }
+
+  @media (max-width: 800px) {
+    height: 555px;
+  }
+
+  @media (max-width: 700px) {
+    height: 455px;
+  }
+
   @media (max-width: 480px) {
     height: 355px;
+  }
+
+  @media (max-width: 380px) {
+    height: 310px;
   }
 }
