--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -116,4 +116,19 @@
       width: 350px;
     }
   }
+
+  @media (max-width: 380px) {
+    &__img {
+      width: 300px;
+    }
+
+    &__title {
+      font-size: 40px;
+      margin-bottom: 15px;
+    }
+
+    &__button {
+      margin-bottom: 50px;
+    }
+  }
 }
