add active contacts, change hover time for nav

--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -11,7 +11,7 @@
   &__item {
     padding: 0 25px;
     list-style-type: none;
-    transition: transform 1s;
+    transition: transform 0.5s;
 
     &:hover {
       transform: scale(1.1);
@@ -32,7 +32,8 @@
   &__toggler-label {
     display: none;
     padding: 10px;
-    color: black;
+    color: $color-black;
+    cursor: pointer;
 
     &::before {
       content: url(../images/burgeronn.png);
@@ -45,9 +46,9 @@
 
   &__toggler:checked ~ .nav__list {
     margin: 0;
-    background-color: #fff;
+    background-color: $color-white;
     width: 300px;
-    border: 1px solid gray;
+    border: 1px solid $color-gray;
     border-radius: 5px;
     opacity: 0.9;
   }
