--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,6 +3,7 @@ $Montserrat: "Montserrat", sans-serif;
 
 $color-black: black;
 $color-white: white;
+$color-gray: gray;
 $color-green: #1a5a4c;
 $color-orange: #f14a27;
 $btn-size: 70px;
