fix footer info

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -39,7 +39,19 @@
 
   &__info {
     margin-bottom: 20px;
-    width: 160px;
+    width: 175px;
+
+    &-link {
+      text-decoration: none;
+      color: $color-black;
+      cursor: pointer;
+
+      transition: color 0.5s;
+
+      &:hover {
+        color: $color-orange;
+      }
+    }
   }
 
   &__contacts {
