add script for close burber menu

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -99,6 +99,12 @@
   &__link {
     color: $color-black;
     text-decoration: none;
+
+    transition: color 0.5s;
+
+    &:hover {
+      color: $color-orange;
+    }
   }
 
   @media (min-width: 1700px) {
