fix footer and media size in 900px

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -24,7 +24,7 @@
   &__schedule {
     display: flex;
     flex-direction: column;
-    margin-left: 10%;
+    margin-left: 7%;
     width: 160px;
 
     font-family: $IBM;
@@ -57,7 +57,7 @@
   &__contacts {
     display: flex;
     flex-direction: column;
-    margin-left: 10%;
+    margin-left: 7%;
     width: 177px;
 
     font-family: $IBM;
@@ -128,6 +128,7 @@
 
   @media (max-width: 600px) {
     padding: 50px 5%;
+    justify-content: space-between;
 
     &__schedule {
       margin: 0;
@@ -138,25 +139,33 @@
     }
 
     &__logo {
-      display: none;
+      flex-direction: column;
     }
   }
 
-  @media (max-width: 380px) {
+  @media (max-width: 510px) {
     flex-direction: column;
     align-items: center;
 
-    &__contacts,
-    &__schedule {
-      width: 190px;
+    &__socials {
+      margin-top: 10px;
+      margin-bottom: 20px;
     }
 
-    &__schedule {
-      margin-bottom: 20px;
+    &__info,
+    &__heading {
+      width: 190px;
+      font-size: 15px;
+      align-items: center;
     }
 
     &__heading {
       margin-bottom: 5px;
+      text-align: center;
+    }
+
+    &__schedule {
+      margin-bottom: 20px;
     }
   }
 }
