--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -79,6 +79,7 @@
   @media (max-width: 950px) {
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     &__picture {
       &-top {
