--- a/src/styles/_subscription.scss
+++ b/src/styles/_subscription.scss
@@ -53,8 +53,9 @@
     }
   }
 
-  @media (max-width: 450px) {
+  @media (max-width: 470px) {
     height: 300px;
+    padding: 0 5px;
     
     &__input {
       width: 270px;
