--- a/src/styles/_title.scss
+++ b/src/styles/_title.scss
@@ -121,12 +121,14 @@
   }
 
   @media (max-width: 900px) {
-    height: 455px;
+    height: 655px;
     &__img {
       display: none;
 
       &-mid {
         display: block;
+        object-fit: cover;
+        object-position: center;
       }
     }
 
@@ -157,10 +159,6 @@
         align-items: center;
       }
     }
-  }
-
-  @media (max-width: 900px) {
-    height: 655px;
   }
 
   @media (max-width: 800px) {
