--- a/src/styles/ex-card.scss
+++ b/src/styles/ex-card.scss
@@ -2,22 +2,20 @@
   display: flex;
   padding-left: 41px;
 
-
   &__container-img {
     position: relative;
     width: 585px;
-    height: 580px;
 
     margin-right: 30px ;
 
     order: 1;
 
     &--2 {
-    background-image: url("../images/Мистецтво ХХ ст. - ХХі ст..png");
-    background-position: left;
-    background-repeat: no-repeat;
+      background-image: url("../images/Мистецтво ХХ ст. - ХХі ст..png");
+      background-position: left;
+      background-repeat: no-repeat;
 
-    order: 3;
+      order: 3;
     }
 
     &--3 {
@@ -55,8 +53,6 @@
     }
   }
 
-
-
   &__date {
     margin-bottom: 10px;
 
@@ -68,17 +64,17 @@
 
     color: #cd4d31;
 
-  &--1{
-    margin-bottom: 20px;
+    &--1 {
+      margin-bottom: 20px;
 
-    font-family: "Playfair Display", sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 48px;
-    line-height: 120%;
+      font-family: "Playfair Display", sans-serif;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 48px;
+      line-height: 120%;
 
-    transform: translateX(-100px);
-  }
+      transform: translateX(-100px);
+    }
   }
 
   &__title {
@@ -98,7 +94,7 @@
     margin-bottom: 50px;
 
     font-family: "Raleway", sans-serif;
-     font-size: 16px;
+    font-size: 16px;
     line-height: 150%;
 
     color: #504f5e;
@@ -124,7 +120,56 @@
       border-color: #3f5252 ;
       box-shadow: 1px 1px 23px #3f5252;
     }
-
   }
 
+  @media screen and (max-width: 1250px) {
+    & {
+      padding-left: 0;
+      width: 100vw;
+      height: 400px;
+
+      &__link {
+        display: none;
+      }
+
+      &__image-11 {
+        width: 293px;
+        transform: translateY(-50px);
+      }
+
+      &__image-21 {
+        width: 298px;
+        transform: translate(5px, 110px);
+      }
+
+      &__image-31 {
+        height: 275px;
+        transform: translate(-10px, 45px);
+      }
+
+      &__container-img {
+        width: 293px;
+      }
+
+      &__container-img--2,
+      &__container-img--3 {
+        background-size: contain;
+      }
+
+      &__container-text {
+        width: 370px;
+        padding-top: 55px;
+        padding-left: 20px;
+      }
+
+      &__container-text--2 {
+        margin-left: 80px;
+      }
+
+      &__text {
+        width: 270px;
+        font-weight: 200;
+      }
+    }
+  }
 }
