--- a/src/styles/exhibitions.scss
+++ b/src/styles/exhibitions.scss
@@ -1,4 +1,5 @@
 .exhibition {
+  position: relative;
   display: flex;
   flex-direction: column;
 
@@ -16,6 +17,10 @@
     line-height: 120%;
 
     color: #1c1b29;
+  }
+
+  &__first {
+    padding-left: 0;
   }
 
   &__link {
@@ -46,6 +51,33 @@
       width: 70px;
       height: 1px;
       background-color: #1c1b29;
+    }
+  }
+
+  @media screen and (max-width: 1250px) {
+    & {
+      padding-top: 110px;
+      padding-bottom: 200px;
+      padding-left: calc(50% - 370px);
+      padding-right: calc(50% - 370px);
+    }
+
+    &__link {
+      position: absolute;
+      bottom: 120px;
+      right: 275px;
+      margin: 0;
+
+      &::after {
+        content: "";
+        position: absolute;
+        top: 25px;
+        left: -20px;
+
+        width: 155px;
+        height: 1px;
+        background-color: #1c1b29;
+      }
     }
   }
 }
