--- a/src/styles/fcard.scss
+++ b/src/styles/fcard.scss
@@ -118,4 +118,19 @@
       order: 0;
     }
   }
+
+  @media screen and (max-width: 1250px) {
+    &__foto {
+      display: none;
+    }
+
+    &__text {
+      margin-bottom: 30px;
+    }
+
+    &__date::after {
+      left: 40px;
+      top: 50px;
+    }
+  }
 }
