--- a/src/styles/future.scss
+++ b/src/styles/future.scss
@@ -48,4 +48,26 @@
       background-color: #1c1b29;
     }
   }
+
+  @media screen and (max-width: 1250px) {
+    & {
+      padding-bottom: 134px;
+    }
+
+    &__title {
+      margin: 0;
+      text-align: center;
+    }
+
+    &__calendar {
+      margin-left: auto;
+      margin-right: auto;
+
+      &::after {
+        top: 25px;
+        left: -20px;
+        width: 160px;
+      }
+    }
+  }
 }
