--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,23 +1,33 @@
 .header {
   box-sizing: border-box;
   position: relative;
-  width: 100%;
-  min-height: 800px;
+  width: 100vw;
+  height: 800px;
   padding-top: 20px;
   padding-bottom: 52px;
 
-  padding-left: calc(50% - 640px);
-  padding-right: calc(50% - 640px);
+  padding-left: calc(50% - 585px);
+  padding-right: calc(50% - 585px);
 
   background-color: #3f5252;
 
-  background-image: url("../images/1200px-Girl_from_Podolye_by_V.Tropinin_(b.png");
-  background-repeat: no-repeat;
-  background-position: bottom -1px right 0;
-
   &__language {
-    margin-left: calc(50% + 534px);
-    margin-right: auto;
+    position: absolute;
+    width: 50px;
+    right: 310px;
+
+    transform: translateY(-11px);
+
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    border: none;
+    color: #f1f5f4;
+    background-color:  #3f5252;
+
+    z-index: 2;
+
   }
 
   &__org {
@@ -31,6 +41,12 @@
     color: #f1f5f4;
 
     z-index: 2;
+  }
+
+  &__image {
+    position: absolute;
+    bottom: 0;
+    right: 0;
   }
 
   &__picture-name {
@@ -133,5 +149,47 @@
       background-color: #f1f5f4;
       opacity: 0.3;
     }
+  }
+}
+
+@media screen and (max-width: 1250px) {
+
+  .header {
+    height: 762px;
+    padding-left: calc(50% - 285px);
+    padding-right: calc(50% - 285px);
+    padding-bottom: 0;
+  }
+  .header__image {
+    height: 445px;
+  }
+
+  .header__language {
+    top: 28px;
+    right: 71px;
+  }
+
+  .text {
+    padding-top: 140px;
+  }
+
+  .text__name-1 {
+    margin-bottom: 0;
+    font-size: 72px;
+  }
+
+  .text__name-2 {
+    margin-bottom: 40px;
+    font-size: 72px;
+  }
+
+  .text__about{
+    margin-left: 0;
+    margin-bottom: 80px;
+  }
+
+  .text__ticket {
+    margin-left: 0;
+    margin-bottom: 180px;
   }
 }
