--- a/src/styles/news.scss
+++ b/src/styles/news.scss
@@ -58,6 +58,36 @@
     }
   }
 
-  // @media screen and (max-width: 800px) {
-  // }
+  @media screen and (max-width: 1250px) {
+    & {
+      padding-top: 115px;
+      padding-bottom: 131px;
+      padding-left: calc(50% - 285px);
+      padding-right: calc(50% - 285px);
+    }
+
+    &__title {
+      margin-left: 5px;
+    }
+
+    &__container {
+      margin-bottom: 0;
+      justify-content: space-around;
+    }
+
+    &__card-3 {
+      display: none;
+    }
+
+    &__link {
+      margin-left:auto;
+      margin-right: auto;
+
+      &::after {
+      top: 25px;
+      left: -20px;
+      width: 120px;
+      }
+    }
+  }
 }
