--- a/src/styles/daigest.scss
+++ b/src/styles/daigest.scss
@@ -2,20 +2,17 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  // box-sizing: border-box;
   height: 459px;
   width: 100vw;
   padding-top: 160px;
   padding-bottom: 160px;
-  padding-left: calc(50% - 640px);
-  padding-right: calc(50% - 640px);
-
+  padding-left: calc(50% - 585px);
+  padding-right: calc(50% - 585px);
 
   background-color: #cd4d31;
 
   &__title {
     margin-bottom: 41px;
-
     font-weight: bold;
     font-size: 48px;
     line-height: 120%;
@@ -35,27 +32,42 @@
 
   }
 
-  &__form {
-    position: relative;
-    bottom: 40px;
-    left: 925px;
-    // padding-left: 5px;
-    // padding-bottom: 5px;
-
-    width: 300px;
-    border-bottom: 1px solid  #f1f5f4;
+  &__box {
+    display: flex;
   }
 
   &__email {
+    margin-top: 20px;
+    margin-left: 145px;
     width: 290px;
 
     border: none;
+    border-bottom: 1px solid  #f1f5f4;;
     outline: none;
     background-color: #cd4d31;
     color: white;
 
     &::placeholder {
       color: #f1f5f4;
+    }
+  }
+
+  @media screen and (max-width: 1050px){
+    & {
+      height: 532px;
+      padding-top: 110px;
+      padding-bottom: 120px;
+      padding-left: 99px;
+      padding-right: 99px;
+    }
+
+    &__box {
+      flex-direction: column;
+    }
+
+    &__email {
+      margin-left: 0;
+      margin-top: 80px;
     }
   }
 }
