--- a/src/styles/news-card.scss
+++ b/src/styles/news-card.scss
@@ -1,7 +1,7 @@
 .news-card {
   display: flex;
   flex-direction: column;
-  
+
   height: 515px;
   width: 370px;
 
@@ -15,6 +15,8 @@
   &__date {
     margin-bottom: 5px;
 
+    font-family: "Raleway", sans-serif;
+    color: #1c1b29;
     font-weight: 200;
     font-size: 14px;
     line-height: 20px;
@@ -30,7 +32,22 @@
   }
 
   &__text {
+    font-family: "Raleway", sans-serif;
+    color: #1c1b29;
     font-size: 16px;
     color: #504f5e;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .news-card {
+    width: 270px;
+    &__image {
+      width: 270px;
+    }
+
+    &__title {
+      font-size: 18px;
+    }
   }
 }
