--- a/src/styles/visit_us.scss
+++ b/src/styles/visit_us.scss
@@ -6,20 +6,16 @@
   padding-top: 190px;
   padding-bottom: 195px;
 
-  padding-left: calc(50% - 240px);
+  padding-left: calc(50% - 640px);
   padding-right: calc(50% - 640px);
 
   background-color: #3f5252;
-
-  background-image: url("../images/к.png");
-  background-position: bottom 0 left 0;
-  background-repeat: no-repeat;
 
   &__img {
     position: absolute;
     height: 800px;
 
-    left: calc(50% - 650px);
+    left:0;
     bottom: 0;
   }
 
@@ -27,7 +23,7 @@
     height: 200px;
     width: 700px;
 
-    margin-left: 180px;
+    margin-left: calc(50% - 80px);
 
     font-weight: bold;
     font-size: 96px;
@@ -38,7 +34,7 @@
 
   &__text {
     width: 470px;
-    margin: 60px 0 60px 285px;
+    margin: 60px 0 60px 655px;
 
     font-family: "Raleway", sans-serif;
     font-size: 16px;
@@ -52,6 +48,7 @@
   }
 
   &__link {
+    margin-left: 655px;
 
     padding: 17.5px 99px;
 
@@ -71,10 +68,32 @@
     }
   }
 
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 1250px) {
     & {
-      width: 100vw;
-      height: 705px;
+      padding-top: 120px;
+      padding-bottom: 170px;
     }
+
+    &__img {
+      height: 460px;
+    }
+
+    &__title {
+      height: 200px;
+      width: 523px;
+      margin-left: 130px;
+
+      font-size: 72px;
+    }
+
+    &__text {
+      margin-left: 330px;
+      width: 370px;
+    }
+
+    &__link {
+      margin-left: 330px;
+    }
+
   }
 }
