--- a/src/styles/daigest.scss
+++ b/src/styles/daigest.scss
@@ -42,7 +42,7 @@
     width: 290px;
 
     border: none;
-    border-bottom: 1px solid  #f1f5f4;;
+    border-bottom: 1px solid #f1f5f4;
     outline: none;
     background-color: #cd4d31;
     color: white;
@@ -52,7 +52,7 @@
     }
   }
 
-  @media screen and (max-width: 1050px){
+  @media screen and (max-width: 1050px) {
     & {
       height: 532px;
       padding-top: 110px;
