--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,7 +1,6 @@
 .footer {
   position: relative;
   display: flex;
-  // justify-content: space-between;
 
   width: 100vw;
   padding-top: 160px;
@@ -9,7 +8,7 @@
   padding-left: calc(50% - 585px);
   padding-right: calc(50% - 585px);
 
-  background: #3F5252;
+  background: #3f5252;
 
   &__arrow {
     position: absolute;
@@ -46,7 +45,7 @@
     position: absolute;
     bottom: 60px;
     left: calc(50% - 112px);
-    right: calc(50%- 112px);
+    right: calc(50% - 112px);
   }
 
   &__copyright {
@@ -59,7 +58,7 @@
     color: #f1f5f4;
   }
 
-  &__privacy  {
+  &__privacy {
 
     font-family: "Raleway", sans-serif;
     font-weight: 100;
@@ -76,7 +75,6 @@
   flex-direction: column;
   width: 240px;
   margin-right: 90px;
-
 
   &__title {
     margin-bottom: 40px;
@@ -95,16 +93,17 @@
     font-size: 16px;
     font-weight: 100;
     line-height: 150%;
-    color:  #f1f5f4;
+    color: #f1f5f4;
   }
-  &__phone{
+
+  &__phone {
     margin-left: 32px;
 
     font-family: "Raleway", sans-serif;
     font-size: 16px;
     font-weight: 100;
     line-height: 150%;
-    color:  #f1f5f4;
+    color: #f1f5f4;
   }
 
   &__mail {
@@ -114,7 +113,7 @@
     font-size: 16px;
     font-weight: 100;
     line-height: 150%;
-    color:  #f1f5f4;
+    color: #f1f5f4;
   }
 
   &__container {
@@ -141,7 +140,7 @@
     color: #f1f5f4;
   }
 
-  &__container{
+  &__container {
     display: flex;
   }
 
@@ -152,7 +151,7 @@
     font-size: 16px;
     font-weight: 100;
     line-height: 150%;
-    color:  #f1f5f4;
+    color: #f1f5f4;
   }
 
   &__time {
@@ -162,7 +161,7 @@
     font-size: 16px;
     font-weight: 100;
     line-height: 150%;
-    color:  #f1f5f4;
+    color: #f1f5f4;
   }
 }
 
@@ -177,7 +176,7 @@
   &__title {
     margin-bottom: 38px;
 
-    font-family: "Playfair Display",  sans-serif;
+    font-family: "Playfair Display", sans-serif;
     font-weight: bold;
     font-size: 24px;
     line-height: 125%;
@@ -208,7 +207,7 @@
   &__title {
     margin-bottom: 40px;
 
-    font-family: "Playfair Display",  sans-serif;
+    font-family: "Playfair Display", sans-serif;
     font-weight: bold;
     font-size: 24px;
     line-height: 125%;
@@ -218,7 +217,7 @@
   &__history,
   &__museum,
   &__hire,
-  &__news  {
+  &__news {
     margin-bottom: 5px;
 
     font-family: "Raleway", sans-serif;
@@ -237,7 +236,6 @@
     padding-bottom: 155px;
     padding-left: calc(50% - 390px);
     padding-right: calc(50% - 330px);
-
 
     &__arrow {
       top: 125px;
@@ -260,6 +258,6 @@
   }
 
   .membership {
-   order: 4;
+    order: 4;
   }
 }
