--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,15 +1,14 @@
 .nav {
   padding-top: 20px;
 
-  &__burger  {
+  &__burger {
     position: absolute;
     top: 9px;
     display: block;
     width: 25px;
     height: 2px;
 
-
-    background-color:#f1f5f4;
+    background-color: #f1f5f4;
 
     &::after {
       content: "";
@@ -18,7 +17,7 @@
       top: -7px;
       width: 25px;
       height: 2px;
-      background-color:  #f1f5f4;
+      background-color: #f1f5f4;
     }
 
     &::before {
@@ -27,9 +26,8 @@
       top: +7px;
       width: 25px;
       height: 2px;
-      background-color:  #f1f5f4;
+      background-color: #f1f5f4;
     }
-
   }
 
   &__chekbutton {
@@ -41,7 +39,6 @@
 
     z-index: 5;
   }
-
 
   &__visite {
     display: none;
@@ -56,8 +53,7 @@
   &__work-title-2 {
     margin-right: 90px;
 
-    font-family:  "Raleway",sans-serif;
-    font-style: normal;
+    font-family: "Raleway", sans-serif;
     font-weight: 100;
     font-size: 14px;
     line-height: 20px;
@@ -67,13 +63,12 @@
 
   &__work-info {
     margin-right: 112px;
-    font-family:  "Raleway",sans-serif;
-    font-style: normal;
+    font-family: "Raleway", sans-serif;
     font-weight: 200;
     font-size: 16px;
     line-height: 20px;
     align-items: center;
-    color: #F1F5F4;
+    color: #f1f5f4;
 
     &:last-child {
       margin: 0;
@@ -106,13 +101,13 @@
 
       width: 570px;
       height: 1px;
-      background-color:  #f1f5f4;
+      background-color: #f1f5f4;
       opacity: 0.3;
     }
   }
 
   &__link {
-    font-family: "Playfair Display",sans-serif;
+    font-family: "Playfair Display", sans-serif;
     font-weight: bold;
     font-size: 48px;
     line-height: 120px;
@@ -182,25 +177,25 @@
     z-index: 2;
   }
 
-  &__chekbutton>.nav__burger,
-  &__chekbutton>.nav__burger::before,
-  &__chekbutton>.nav__burger::after {
-    transition-duration:  300ms;
+  &__chekbutton > .nav__burger,
+  &__chekbutton > .nav__burger::before,
+  &__chekbutton > .nav__burger::after {
+    transition-duration: 300ms;
   }
 
   &__toggler {
     display: none;
 
-    &:checked ~ .nav__chekbutton>.nav__burger {
+    &:checked ~ .nav__chekbutton > .nav__burger {
       transform: rotate(45deg);
     }
 
-    &:checked ~ .nav__chekbutton>.nav__burger::before {
+    &:checked ~ .nav__chekbutton > .nav__burger::before {
       top: 0;
       transform: rotate(0);
     }
 
-    &:checked ~ .nav__chekbutton>.nav__burger::after {
+    &:checked ~ .nav__chekbutton > .nav__burger::after {
       top: 0;
       transform: rotate(90deg);
     }
@@ -220,7 +215,7 @@
     }
   }
 
-  @media screen and (max-width: 1100px) {
+  @media screen and (max-width: 1250px) {
     &__link {
       line-height: 100px;
     }
