--- a/src/styles/visit_us.scss
+++ b/src/styles/visit_us.scss
@@ -13,21 +13,18 @@
 
   &__img {
     position: absolute;
-    height: 800px;
-
-    left:0;
+    left: 0;
     bottom: 0;
+    height: 800px;
   }
 
   &__title {
     height: 200px;
     width: 700px;
-
     margin-left: calc(50% - 80px);
 
     font-weight: bold;
     font-size: 96px;
-
     color: #f1f5f4;
     line-height: 100%;
   }
@@ -49,7 +46,6 @@
 
   &__link {
     margin-left: 655px;
-
     padding: 17.5px 99px;
 
     font-family: "Raleway", sans-serif;
@@ -60,7 +56,7 @@
     border: 3px solid #f1f5f4;
     border-color: transparent;
 
-    transition: 300ms;
+    transition: border-color 300ms, box-shadow 300ms;
 
     &:hover {
       border-color: #f1f5f4 ;
