--- a/src/styles/fcard.scss
+++ b/src/styles/fcard.scss
@@ -5,7 +5,6 @@
   padding-right: 55px;
   max-width: 1280px;
 
-
   &__date {
     position: relative;
 
@@ -24,20 +23,15 @@
 
     &::after {
       content: "14:00";
-
-      -webkit-text-stroke: initial;
-
       position: absolute;
       left: 80px;
       top: 70px;
-
-
 
       font-family: "Playfair Display", sans-serif;
       font-weight: bold;
       font-size: 37px;
       line-height: 100%;
-
+      -webkit-text-stroke: initial;
       color: #cd4d31;
     }
   }
@@ -73,18 +67,16 @@
     font-size: 24px;
     line-height: 125%;
 
-    color: #1C1B29;
+    color: #1c1b29;
   }
 
   &__text {
     margin-bottom: 60px;
 
     font-family: "Raleway", sans-serif;
-    font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 150%;
-
     color: #504f5e;
   }
 
@@ -102,7 +94,7 @@
     border: 3px solid #3f5252;
     border-color: transparent;
 
-    transition: 300ms;
+    transition: border-color 300ms, box-shadow 300ms;
 
     &:hover {
       border-color: #3f5252 ;
