--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -18,13 +18,13 @@
 
     transform: translateY(-11px);
 
-    font-family: Raleway;
+    font-family: "Raleway", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     border: none;
     color: #f1f5f4;
-    background-color:  #3f5252;
+    background-color: #3f5252;
 
     z-index: 2;
 
@@ -183,7 +183,7 @@
     font-size: 72px;
   }
 
-  .text__about{
+  .text__about {
     margin-left: 0;
     margin-bottom: 80px;
   }
