fix height img title and events, media >320px

--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -42,7 +42,7 @@
   }
 
   &__mark {
-    display: inline;
+    @include mark;
     margin-right: 26px;
   }
 
@@ -54,6 +54,7 @@
     margin: 10px 0;
     white-space: nowrap;
     font-size: 36px;
+    font-weight: 300;
 
     &::after {
       display: inline-block;
@@ -146,33 +147,19 @@
     }
 
     &__img {
-      height: 320px;
+      height: 60vw;
       max-width: 470px;
+    }
+
+    &__info {
+      width: 80vw;
+      text-align: center;
     }
   }
 
   @media (max-width: 480px) {
-    &__img {
-      height: 200px;
-      max-width: 470px;
-    }
-
     &__heading {
       font-size: 24px;
-    }
-
-    &__info {
-      width: 320px;
-    }
-  }
-
-  @media (max-width: 480px) {
-    &__img {
-      height: 180px;
-    }
-
-    &__info {
-      text-align: center;
     }
   }
 }
