--- a/src/styles/_lecture.scss
+++ b/src/styles/_lecture.scss
@@ -21,7 +21,7 @@
   }
 
   &__mark {
-    display: inline;
+    @include mark;
     margin-right: 146px;
   }
 
@@ -31,6 +31,7 @@
 
   &__heading {
     font-size: $heading-size;
+    font-weight: 300;
     margin-top: 16px;
   }
 
