--- a/src/styles/_subscription.scss
+++ b/src/styles/_subscription.scss
@@ -59,6 +59,8 @@
     
     &__input {
       width: 270px;
+      padding-left: 5%;
+      font-size: 16px;
     }
 
     &__info {
@@ -69,6 +71,15 @@
   @media (max-width: 380px) {
     &__input {
       width: 240px;
+      font-size: 14px;
+    }
+  }
+
+  @media (max-width: 305px) {
+    &__input {
+      width: 220px;
+      padding: 0 5%;
+      font-size: 14px;
     }
   }
 }
