--- a/src/styles/_title.scss
+++ b/src/styles/_title.scss
@@ -52,6 +52,7 @@
 
   &__ticket {
     display: flex;
+    @include ticket;
 
     position: absolute;
     top: 467px;
@@ -59,10 +60,13 @@
 
     &-bottom {
       display: none;
+      @include ticket;
     }
   }
 
   &__mark {
+    @include mark;
+
     position: absolute;
     bottom: 120px;
     left: 40px;
@@ -103,11 +107,9 @@
   }
 
   @media (max-width: 1200px) {
-    &__heading {
-      left: 100px;
-    }
 
-    &__ticket {
+    &__ticket,
+    &__heading {
       left: 100px;
     }
 
@@ -116,12 +118,7 @@
     }
   }
 
-  @media (max-width: 1030px) {
-    top: -50px;
-  }
-
   @media (max-width: 900px) {
-    height: 655px;
     &__img {
       display: none;
 
@@ -162,18 +159,6 @@
   }
 
   @media (max-width: 800px) {
-    height: 555px;
-  }
-
-  @media (max-width: 700px) {
-    height: 455px;
-  }
-
-  @media (max-width: 480px) {
-    height: 355px;
-  }
-
-  @media (max-width: 380px) {
-    height: 310px;
+    height: 80vw;
   }
 }
