--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -11,3 +11,27 @@ $general-padding: 5%;
 $heading-size: 36px;
 $item-size: 14px;
 $title-size: 48px;
+
+@mixin ticket {
+  width: 220px;
+  height: $btn-size;
+  padding-left: 35px;
+  justify-content: space-between;
+  align-items: center;
+
+  font-family: $IBM;
+  font-weight: 500;
+  font-size: 16px;
+  text-transform: uppercase;
+
+  background-color: $color-white;
+  border: 2px solid $color-green;
+}
+
+@mixin mark {
+  font-family: $IBM;
+  font-weight: 500;
+  font-size: $item-size;
+  text-transform: uppercase;
+  opacity: 0.8;
+}
