--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,3 +1,104 @@
 .header {
-  height: 50px;
+  position: relative;
+  z-index: 1;
+
+  &__list {
+    display: flex;
+    justify-content: center;
+    box-shadow: 0 1px 0 $color-green;
+  }
+
+  &__item {
+    padding: 0 23px;
+    list-style-type: none;
+    transition: transform 0.5s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
+  &__link {
+    white-space: nowrap;
+    font-family: $IBM;
+    font-size: 20px;
+    line-height: 50px;
+    font-weight: 550;
+    text-decoration: none;
+
+    color: $color-green;
+  }
+
+  &__toggler-label {
+    display: none;
+    padding: 10px;
+    color: $color-black;
+    cursor: pointer;
+
+    &::before {
+      content: url(../images/burgeronn.png);
+    }
+  }
+
+  &__toggler:checked ~ .header__toggler-label::before {
+    content: url(../images/burgeroff.png);
+  }
+
+  &__toggler:checked ~ .header__list {
+    margin: 0;
+    background-color: $color-white;
+    width: 300px;
+    border: 1px solid $color-gray;
+    border-radius: 5px;
+    opacity: 0.9;
+  }
+
+  &__toggler {
+    display: none;
+  }
+
+  @media (max-width: 1250px) {
+    &__item {
+      padding: 0 15px;
+    }
+
+    &__link {
+      font-size: 18px;
+    }
+  }
+
+  @media (max-width: 1030px) {
+    position: absolute;
+
+    &__item {
+      transition: box-shadow 0.5s;
+    }
+
+    &__item:hover {
+      transform: scale(1);
+      box-shadow: 0 1px 10px $color-green;
+    }
+
+    .header__toggler-label {
+      display: inline-block;
+    }
+  
+    .header__list {
+      flex-direction: column;
+    }
+  
+    .header__toggler:not(:checked) ~ .header__list {
+      display: none;
+    }
+
+    &__link {
+      font-size: 24px;
+    }
+  }
+
+  @media (min-width: 1031px) {
+    &__toggler:checked ~ .header__list {
+      width: 100%;
+    }
+  }
 }
