--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -23,3 +23,11 @@ button {
   margin: 0;
   padding: 0;
 }
+
+@media (min-width: 2500px) {
+  .page {
+    max-width: 2500px;
+    margin: 0 auto;
+    border: 1px solid $color-green;
+  }
+}
