changed border on box-shadow in page

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -28,6 +28,6 @@ button {
   .page {
     max-width: 2500px;
     margin: 0 auto;
-    border: 1px solid $color-green;
+    box-shadow: 1px 1px 10px $color-gray;
   }
 }
