--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -102,6 +102,7 @@
   &__nav {
     position: relative;
     font-size: 16px;
+    line-height: 40px;
   }
 }
 
@@ -110,10 +111,6 @@
   justify-content: space-between;
   max-width: 400px;
   width: 400%;
-}
-
-.nav__item {
-  margin-bottom: 20px;
 }
 
 .icon__fb {
@@ -195,6 +192,7 @@
   .footer {
     justify-content: center;
     height: 930px;
+    font-size: 12px;
   }
 
   .footer__container {
@@ -207,7 +205,6 @@
     justify-content: space-between;
     align-items: center;
     max-width: 90%;
-    margin: 0;
     height: 70px;
     margin-bottom: 20px;
   }
@@ -219,19 +216,52 @@
   .footer__time-works {
     margin: 0;
   }
+
+  .footer__nav {
+    max-width: 500px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+
   .nav__list-left {
     margin: 0;
   }
 
   .footer__design {
     flex-direction: column;
-    margin: 0 auto;
+    margin: auto;
     margin-top: 130px;
-
   }
 
   .footer__line {
     margin-left: 1%;
     width: 100%;
+    margin: auto;
+  }
+
+  .footer-contacts {
+    align-items: flex-end;
+    align-self: flex-end;
+    justify-content: flex-end;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer {
+    font-size: 10px;
+  }
+  .footer__icon {
+    margin-top: 50px;
+  }
+  .footer__details {
+    margin-right: 10px;
+  }
+  .footer__line {
+    width: 250px;
+  }
+  .footer__left,
+  .footer__nav {
+    width: 250px;
   }
 }
