--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -33,6 +33,7 @@
       bottom: 0;
       right: 0;
       width: 100%;
+      object-fit: cover;
     }
   }
 
@@ -76,7 +77,7 @@
     transition: background-color $transitionDuration;
 
     padding-left: 43px;
-    z-index: 1;
+    z-index: 0;
 
     
 
