--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
 @import "subscription";
 @import "footer";
 @import "circles";
+@import "hover";
 
 * {
   box-sizing: border-box;
@@ -41,5 +42,4 @@ body {
 .main {
   display: flex;
   flex-direction: column;
-  /*width: 100vw;*/
 }
