--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -39,12 +39,15 @@
       width: 470px;
       height: 70px;
       padding-left: 35px;
+      font-size: 16px;
     }
 
     &-submit {
       width: 70px;
       height: 70px;
       margin-left: 30px;
+      cursor: pointer;
+
       background-color: $hoverColor;
       border: 1px solid $hoverColor;
       font-weight: bold;
@@ -76,7 +79,6 @@
 
       &-input {
         width: 395px;
-
       }
 
       &-submit {
