--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -1,9 +1,10 @@
 .container {
   max-width: 1900px;
-  margin: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-right: 4vw;
+  padding-left: 4vw;
 }
 
 @media screen and (min-width: 1500px) {
