--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,5 +1,4 @@
 .menu {
-  /*width: 100%;*/
   &__toggle {
     display: none;
   }
@@ -43,19 +42,14 @@
 
   &__box {
     display: flex;
-    justify-content: center;
     position: absolute;
     transition: 0.25s ease-in-out;
-    /* position: fixed;*/
-    /*justify-content: space-between;*/
-    /*align-items: baseline;*/
     visibility: hidden;
     top: 0;
     width: 100%;
     height: 90px;
     z-index: 1;
     left: -100%;
-    /* margin: 0 auto;*/
     list-style: none;
 
     background-color: $mainColor;
@@ -64,7 +58,6 @@
 
   &__logo {
     position: relative;
-    /*left: 135px;*/
     width: 63px;
     height: 72px;
     top: 8px;
@@ -72,18 +65,13 @@
 
   &__item {
     color: $footerTextColor;
-    
-    /*margin-right: 60px;*/
     font-family: "Oswald", sans-serif;
     font-size: 14px;
     letter-spacing: 1.2px;
     line-height: 100%;
     text-transform: uppercase;
-
-    &:hover {
-      color: $hoverColor;
-    }
   }
+
 
   &__list {
     position: absolute;
@@ -97,13 +85,19 @@
 
 }
 
-.search__img {
-  position: relative;
-  top: 5px;
-}
 
 .search__window {
   width: 100px;
+  background-image: url('../images/search.svg');
+  background-repeat: no-repeat;
+  border: 0.2px solid lightgray;
+  background-position: right;
+  align-items: center;
+  align-self: center;
+  justify-content: center;
+  align-content: center;
+  height: 20px;
+  outline: none;
 }
 
 .menu__toggle:checked ~ .menu__btn > span {
@@ -134,8 +128,7 @@
 
   .menu__list {
     flex-direction: column;
-    align-items: flex-start;
-    
+    align-items: center;
   }
 
   .menu__item {
@@ -143,4 +136,10 @@
     font-size: 18px;
     line-height: 3;
   }
+
+  .menu__logo {
+    right: 0;
+  }
+
+
 }
