--- a/src/styles/middle-part.scss
+++ b/src/styles/middle-part.scss
@@ -2,6 +2,7 @@
   height: 675px;
   margin-top: 100px;
   background-image: url(../images/middle-picture.jpg);
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
