Favicon and action on buttons added

--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -173,11 +173,9 @@
 
       @media (max-width: $containerMaxWidth - 1px) {
         justify-content: center;
-        grid-template-columns: repeat
-          (
-            3,
-            $newsItemSizeLarge / $containerMaxWidth * 100vw
-          );
+        grid-template-columns: repeat(
+          3, $newsItemSizeLarge / $containerMaxWidth * 100vw
+        );
         grid-column-gap: 30px / $containerMaxWidth * 100vw;
       }
 
